src/objects/Talent_Management__c.object
<CustomObject>
    <description>HR/Management object meant to keep records of an employee&apos;s pre-hire, ramp, reviews, and performance metrics in a centralized place.</description>
    <fields>
        <fullName>BIP_Role_Play_Assessment_Completed__c</fullName>
        <label>BIP Role-Play Assessment Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIP_Role_Play_Assessment_Score__c</fullName>
        <label>BIP Role-Play Assessment Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHAMP_Practical_Exam_Completed__c</fullName>
        <label>CHAMP Practical Exam Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHAMP_Practical_Exam_Result__c</fullName>
        <label>CHAMP Practical Exam Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass with Honors</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHAMP_Written_Exam_Completed__c</fullName>
        <label>CHAMP Written Exam Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHAMP_Written_Exam_Result__c</fullName>
        <label>CHAMP Written Exam Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass with Honors</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_with_Manager_1__c</fullName>
        <label>Call with Manager (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_with_Manager_2__c</fullName>
        <label>Call with Manager (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_with_Manager_and_SE_1__c</fullName>
        <label>Call with Manager and SE (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_with_SDR_and_SDM_1__c</fullName>
        <label>Call with SDR and SDM (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_with_SDR_and_SDM_2__c</fullName>
        <label>Call with SDR and SDM (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cold_Call_Role_Play_Assessment_Completed__c</fullName>
        <label>Cold Call Role-Play Assessment Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cold_Call_Role_Play_Assessment_Score__c</fullName>
        <label>Cold Call Role-Play Assessment Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cold_Call_Role_Play_Assessor__c</fullName>
        <label>Cold Call Role-Play Assessor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Calling_1__c</fullName>
        <label>Cold Calling (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cold_Calling_2__c</fullName>
        <label>Cold Calling (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_User_Salesforce_Metric__c</fullName>
        <formula>Owner:User.Current_Salesforce_Metric__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Salesforce Metric #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivering_the_Demo_Completed__c</fullName>
        <label>Delivering the Demo Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivering_the_Demo_Score__c</fullName>
        <label>Delivering the Demo Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Guide_Review_Completed_By__c</fullName>
        <label>Development Guide Review Completed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Guide_Review_Completed__c</fullName>
        <label>Development Guide Review Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Guide_Review_Score__c</fullName>
        <label>Development Guide Review Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Ride_Along_1__c</fullName>
        <label>Executive Ride-Along (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Ride_Along_2__c</fullName>
        <label>Executive Ride-Along (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Call_Role_Play_Assessment_Complete__c</fullName>
        <label>First Call Role-Play Assessment Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Call_Role_Play_Assessment_Score__c</fullName>
        <label>First Call Role-Play Assessment Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Evaluation_BIP_Delivery_1__c</fullName>
        <label>Manager Evaluation - BIP Delivery (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Evaluation_BIP_Delivery_2__c</fullName>
        <label>Manager Evaluation - BIP Delivery (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Evaluation_First_Call_1__c</fullName>
        <label>Manager Evaluation - First Call (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Evaluation_First_Call_2__c</fullName>
        <label>Manager Evaluation - First Call (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_Evaluation_First_Call_3__c</fullName>
        <label>Manager Evaluation - First Call (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Charles_Crouchman__c</fullName>
        <label>Meet with Charles Crouchman</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Customer_Experience_Manager__c</fullName>
        <label>Meet with Customer Experience Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Enterprise_Commercial_AE__c</fullName>
        <label>Meet with Enterprise/Commercial AE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Eric_Fischer__c</fullName>
        <label>Meet with Eric Fischer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Manager_Beginning_of_Week__c</fullName>
        <inlineHelpText>Date check for meeting with manager on first day</inlineHelpText>
        <label>Meet with Manager (Beginning of Week)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Manager_End_of_Week__c</fullName>
        <inlineHelpText>Date check to ensure manager meets with employee at the end of first week</inlineHelpText>
        <label>Meet with Manager (End of Week)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Partner_Manager__c</fullName>
        <label>Meet with Partner Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Sales_Development_Manager__c</fullName>
        <label>Meet with Sales Development Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Sales_Development_Rep__c</fullName>
        <label>Meet with Sales Development Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Sales_Engineer__c</fullName>
        <label>Meet with Sales Engineer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meet_with_Shmuel_Kliger_The_Why__c</fullName>
        <label>Meet with Shmuel Kliger (The Why)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_with_SDM_and_SDR_3__c</fullName>
        <label>Meeting with SDM and SDR (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Start_Date__c</fullName>
        <formula>Owner:User.Start_Date__c</formula>
        <label>Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Work_Exam_Score__c</fullName>
        <label>Pre-Work Exam Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Present_VMTurbo_Pitch_Deck_Completed__c</fullName>
        <label>Present VMTurbo Pitch Deck Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Present_VMTurbo_Pitch_Deck_Score__c</fullName>
        <label>Present VMTurbo Pitch Deck Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDM_Cold_Call_Observation_1_Completed_By__c</fullName>
        <label>SDM Cold Call Observation 1 Completed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDM_Cold_Call_Observation_1_Completed__c</fullName>
        <label>SDM Cold Call Observation 1 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDM_Cold_Call_Observation_2_Completed_By__c</fullName>
        <label>SDM Cold Call Observation 2 Completed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDM_Cold_Call_Observation_2_Completed__c</fullName>
        <label>SDM Cold Call Observation 2 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDM_Cold_Call_Observation_3_Completed_By__c</fullName>
        <label>SDM Cold Call Observation 3 Completed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDM_Cold_Call_Observation_3_Completed__c</fullName>
        <label>SDM Cold Call Observation 3 Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Navigator_Setup_Profile_Update__c</fullName>
        <label>Sales Navigator Setup &amp; Profile Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_BIP_Delivery_1__c</fullName>
        <label>Shadow BIP Delivery (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_BIP_Delivery_2__c</fullName>
        <label>Shadow BIP Delivery (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_BIP_Delivery_3__c</fullName>
        <label>Shadow BIP Delivery (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Closing_Call_1__c</fullName>
        <label>Shadow Closing Call (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Closing_Call_2__c</fullName>
        <label>Shadow Closing Call (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Closing_Call_3__c</fullName>
        <label>Shadow Closing Call (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_First_Call_Initial_Demo_1__c</fullName>
        <label>Shadow First Call/Initial Demo (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_First_Call_Initial_Demo_2__c</fullName>
        <label>Shadow First Call/Initial Demo (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_First_Call_Initial_Demo_3__c</fullName>
        <label>Shadow First Call/Initial Demo (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Impact_Statements_Completed_With__c</fullName>
        <label>Shadow Impact Statements Completed With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_Impact_Statements_Completed__c</fullName>
        <label>Shadow Impact Statements Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Install_Review_1__c</fullName>
        <label>Shadow Install Review (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Install_Review_2__c</fullName>
        <label>Shadow Install Review (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Objection_Handling_Completed_With__c</fullName>
        <label>Shadow Objection Handling Completed With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_Objection_Handling_Completed__c</fullName>
        <label>Shadow Objection Handling Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Qualification_Completed_With__c</fullName>
        <label>Shadow Qualification Completed With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_Qualification_Completed__c</fullName>
        <label>Shadow Qualification Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_SDR_Cold_Calling_1_Completed_With__c</fullName>
        <label>Shadow SDR Cold Calling 1 Completed With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_SDR_Cold_Calling_1__c</fullName>
        <label>Shadow SDR Cold Calling (1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_SDR_Cold_Calling_2_Completed_With__c</fullName>
        <label>Shadow SDR Cold Calling 2 Completed With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_SDR_Cold_Calling_2__c</fullName>
        <label>Shadow SDR Cold Calling (2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_SDR_Cold_Calling_3_Completed_With__c</fullName>
        <label>Shadow SDR Cold Calling 3 Completed With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_SDR_Cold_Calling_3__c</fullName>
        <label>Shadow SDR Cold Calling (3)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Sourcing_1_Completed_With__c</fullName>
        <label>Shadow Sourcing 1 Completed With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_Sourcing_1_Date_Completed__c</fullName>
        <label>Shadow Sourcing 1 Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Sourcing_1_Score__c</fullName>
        <label>Shadow Sourcing 1 Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shadow_Sourcing_2_Completed_With__c</fullName>
        <label>Shadow Sourcing 2 Completed With</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shadow_Sourcing_2_Date_Completed__c</fullName>
        <label>Shadow Sourcing 2 Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shadow_Sourcing_2_Score__c</fullName>
        <label>Shadow Sourcing 2 Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shark_Tank_Presentation_Completed__c</fullName>
        <label>Shark Tank Presentation Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shark_Tank_Presentation_Score__c</fullName>
        <label>Shark Tank Presentation Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sourced_Accounts_Review_Completed__c</fullName>
        <label>Sourced Accounts Review Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sourced_Accounts_Review_Score__c</fullName>
        <label>Sourced Accounts Review Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tenure_in_Role__c</fullName>
        <formula>Owner:User.Tenure_days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenure in Role</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>Owner:User.User_Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Safe_ID__c</fullName>
        <formula>CASESAFEID(OwnerId)</formula>
        <label>User Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Team__c</fullName>
        <formula>TEXT(Owner:User.Team__c)</formula>
        <label>User Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMTurbo_Case_Study_Date_Completed__c</fullName>
        <label>VMTurbo Case Study Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VMTurbo_Case_Study_Score__c</fullName>
        <label>VMTurbo Case Study Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMTurbo_Pitch_Completed__c</fullName>
        <label>VMTurbo Pitch Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VMTurbo_Pitch_Score__c</fullName>
        <label>VMTurbo Pitch Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Virtualization_Analogy_Date_Completed__c</fullName>
        <label>Virtualization Analogy Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Virtualization_Analogy_Score__c</fullName>
        <label>Virtualization Analogy Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_1_Exam_Completed__c</fullName>
        <label>Week 1 Exam Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_1_Exam_Score__c</fullName>
        <label>Week 1 Exam Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_1_Live_Trainings__c</fullName>
        <label>Week 1 Live Trainings</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_1_One_on_One_Meeting__c</fullName>
        <label>Week 1 One-on-One Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_2_One_on_One_Meeting__c</fullName>
        <label>Week 2 One-on-One Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_2_Pre_Work_Content__c</fullName>
        <label>Week 2 Pre-Work Content</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_2_Pre_Work_Exam_Completed__c</fullName>
        <label>Week 2 Pre-Work Exam Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_2_Pre_Work_Exam_Score__c</fullName>
        <label>Week 2 Pre-Work Exam Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_3_Exam_Completed__c</fullName>
        <label>Week 3 Exam Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_3_Exam_Score__c</fullName>
        <label>Week 3 Exam Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_3_Live_Trainings__c</fullName>
        <label>Week 3 Live Trainings</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_from_HR__c</fullName>
        <inlineHelpText>Date HR reaches out to welcome employee</inlineHelpText>
        <label>Welcome Call from HR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_from_Manager__c</fullName>
        <inlineHelpText>Date manager calls employee to welcome them</inlineHelpText>
        <label>Welcome Call from Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Welcome_Email_Sent__c</fullName>
        <inlineHelpText>The date at which the welcome email is sent.</inlineHelpText>
        <label>Welcome Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Whiteboard_Presentation_Completed__c</fullName>
        <label>Whiteboard Presentation Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Whiteboard_Presentation_Score__c</fullName>
        <label>Whiteboard Presentation Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Talent Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User_Role__c</columns>
        <columns>User_Team__c</columns>
        <columns>Original_Start_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Tenure_in_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Talent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talent Management</pluralLabel>
    <recordTypes>
        <fullName>Account_Executive</fullName>
        <active>true</active>
        <label>Account Executive</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Development_Rep</fullName>
        <active>true</active>
        <label>Sales Development Rep</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>